--- a/css/home/bicicletas-lista.css
+++ b/css/home/bicicletas-lista.css
@@ -2,10 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: calc(40 / 18 * 1rem);
-  justify-self: center;
   padding: 0 calc(40 / 18 * 1rem);
   margin: calc(60 / 18 * 1rem) 0;
-  box-sizing: border-box;
   max-width: 100%;
 }
 
@@ -39,13 +37,10 @@
 
 .bicicletas-lista ul {
   display: flex;
-  flex-flow: nowrap;
+  flex-wrap: nowrap;
   gap: calc(40 / 18 * 1rem);
-  width: 100%;
+  justify-content: center;
   max-width: 1400px;
-  /* justify-self: center; */
-  /* margin: 0 auto; */
-  padding: 0 calc(20 / 18 * 1rem);
   overflow-x: auto;
 }
 
